<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.nefari0uss.grocerylist.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/itemsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items_button" />

        <Button
            android:id="@+id/addItemsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_button" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
