<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/dummy_text" />

        <!-- This FrameLayout adds no behavior to the UI, it simply occupies all the extra space which forces the views below down to the bottom of the screen. -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/built_with" />

        <Button
            android:id="@+id/learnMoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_more"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>