<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6.6dp"
                android:layout_marginTop="14.6dp" />
            <EditText
                android:id="@+id/nameInput"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6.6dp"
                android:layout_marginTop="14.6dp" />
            <EditText
                android:id="@+id/countInput"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>